crates/rome_formatter/tests/specs/prettier/js/ternaries/binary.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: binary.js

---
# Input
```js
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room = room.map((row, rowIndex) => (
  row.map((col, colIndex) => (
    (rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width) ? 1 : 0
  ))
))

```

# Output
```js
const funnelSnapshotCard = (report === MY_OVERVIEW &&
  !ReportGK.xar_metrics_active_capitol_v2) ||
  (report === COMPANY_OVERVIEW &&
    !ReportGK.xar_metrics_active_capitol_v2_company_metrics)
  ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  : null;

room =
  room.map(
    (row, rowIndex) => (
      row.map(
        (col, colIndex) => (
          (
            rowIndex === 0 || colIndex === 0 || rowIndex === height || colIndex === width
          ) ? 1 : 0
        ),
      )
    ),
  );

```

# Errors
```
error[SyntaxError]: Invalid assignment to `<ReportMetricsFunnelSnapshotCard metrics`
  ┌─ binary.js:5:5
  │
5 │   ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: Expected an expression for the right hand side of a `/`, but found an operator instead
  ┌─ binary.js:5:57
  │
5 │   ? <ReportMetricsFunnelSnapshotCard metrics={metrics} />
  │                                                        -^ But this operator was encountered instead
  │                                                        │ 
  │                                                        This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ':'
  ┌─ binary.js:6:3
  │
6 │   : null;
  │   ^ Expected an expression here


```


